start work retrieving embeddings